# ray_tracing

./: .gitignore  Cargo.toml  README.md  imgui.ini  out.spv  write_info.txt
base_lib/: Cargo.toml
benchmark/: Cargo.toml
choose_vulkan/: Cargo.toml
cpu_raytracer/: Cargo.toml
cpu_raytracer/src/: gui.rs  main.rs  prelude.rs  ray_tracer.rs
cpu_raytracer/src/ray_tracer/: background.rs  bloom.rs  bvh.rs  camera.rs  hittable.rs  material.rs  texture.rs  world.rs
cpu_raytracer/src/ray_tracer/hittable/: constant_medium.rs  rect.rs  render_box.rs  rotation.rs  sphere.rs  translate.rs
cpu_raytracer/src/ray_tracer/world/: cornell_box.rs  cornell_smoke.rs  demo.rs  dielectric.rs  dielectric_demo.rs  easy_cornell_box.rs  easy_scene.rs  lambertian_test.rs  light_demo.rs  metalic_demo.rs  one_sphere.rs  random_scene.rs  shape_demo.rs  two_spheres.rs
cpu_raytracer/src/ray_tracer/world/demo/: cube_field.rs  lambertian.rs  metalic_demo.rs
cpu_raytracer_lib/: Cargo.toml
cpu_rt/: Cargo.toml  readme.md
cpu_rt/src/: lib.rs  parallel_image.rs  prelude.rs  ray_tracer.rs
cpu_rt/src/prelude/: rgb_color.rs
cpu_rt/src/ray_tracer/: background.rs  bloom.rs  bvh.rs  camera.rs  hittable.rs  logger.rs  pdf.rs  save_file.rs  scenario_info.rs  sun.rs  texture.rs  unit_test.rs  world.rs
cpu_rt/src/ray_tracer/background/: constant_color.rs  saver_loader.rs  sky.rs  sun_sky.rs
cpu_rt/src/ray_tracer/hittable/: constant_medium.rs  oct_tree.rs  render_box.rs  sphere.rs  voxel_world.rs
cpu_rt/src/ray_tracer/hittable/fast_oct_tree/: arena.rs  hit_info.rs  hittable.rs  leafable.rs  mod.rs  prelude.rs  ray_trace.rs  stats.rs  voxel.rs
cpu_rt/src/ray_tracer/hittable/fast_oct_tree/operations/: combine.rs  load.rs  mod.rs  set.rs
cpu_rt/src/ray_tracer/hittable/fast_oct_tree/shapes/: mod.rs
cpu_rt/src/ray_tracer/hittable/oct_tree/: from_voxel_world.rs  hittable.rs  material.rs  node.rs  operations.rs  prelude.rs  ray_trace.rs  shapes.rs
cpu_rt/src/ray_tracer/hittable/oct_tree/operations/: combine.rs  load.rs  set.rs
cpu_rt/src/ray_tracer/hittable/voxel_world/: perlin.rs  voxel_map.rs  voxel_model.rs
cpu_rt/src/ray_tracer/save_file/: traits.rs
cpu_rt/src/ray_tracer/world/: cornell_smoke.rs  cube_world.rs  cube_world_big.rs  dielectric.rs  easy_cornell_box.rs  easy_scene.rs  empty_scene.rs  fast_oct_tree.rs  light_demo.rs  oct_tree_world.rs  sinnoh.rs  voxel_city_big.rs
cpu_rt/src/ray_tracer/world/demo/: lambertian.rs  metalic_demo.rs
cpu_rt/src/ray_tracer/world/oct_tree_world/: compare_voxel_world.rs  load_model.rs  metal.rs  volcano.rs  volume.rs
cpu_rt_runner/: Cargo.toml
cpu_rt_runner/src/: graphics_context.rs  gui.rs  shader.rs
cpu_rt_runner/src/gui/: gui_state.rs
cpu_rt_runner/src/gui/gui_state/: top_menu.rs
examples/: sinnoh.mscene  voxel_city_big.mscene
lib_minya/: Cargo.toml
lib_minya/src/: lib.rs  parallel_image.rs  prelude.rs  ray_tracer.rs
lib_minya/src/prelude/: my_image.rs
lib_minya/src/ray_tracer/: background.rs  bloom.rs  bvh.rs  camera.rs  hittable.rs  logger.rs  material.rs  pdf.rs  ray_tracer_info.rs  scenario_info.rs  sun.rs  texture.rs  world.rs
lib_minya/src/ray_tracer/background/: saver_loader.rs  sky.rs  sun_sky.rs
lib_minya/src/ray_tracer/hittable/: constant_medium.rs  cubeworld.rs  flip_normals.rs  oct_tree.rs  rect.rs  render_box.rs  sphere.rs  sun.rs  voxel_world.rs
lib_minya/src/ray_tracer/hittable/oct_tree/: from_voxel_world.rs  hittable.rs  material.rs  node.rs  operations.rs  prelude.rs  ray_trace.rs  shapes.rs
lib_minya/src/ray_tracer/hittable/voxel_world/: perlin.rs  voxel_map.rs  voxel_model.rs
lib_minya/src/ray_tracer/save_file/: traits.rs
lib_minya/src/ray_tracer/world/: cornell_smoke.rs  cube_world.rs  cube_world_big.rs  demo.rs  dielectric.rs  easy_cornell_box.rs  easy_scene.rs  empty_scene.rs  light_demo.rs  load_vox.rs  load_vox_model.rs  oct_tree_world.rs  one_sphere.rs  random_scene.rs  sinnoh.rs  translucent_cubeworld.rs  two_spheres.rs  voxel_city.rs  voxel_city_big.rs
lib_minya/src/ray_tracer/world/demo/: cube_field.rs  lambertian.rs  metalic_demo.rs
lib_minya/src/ray_tracer/world/oct_tree_world/: compare_voxel_world.rs
minya_bin/: Cargo.toml
minya_bin/src/: graphics_context.rs  gui.rs  main.rs  messages.rs
minya_bin/src/gui/: gui_state.rs
octtree_test/: Cargo.toml
pdf_explorer/: Cargo.toml
prototype_code/: index.html  index.js  (+3 more)
real_time_engine/: Cargo.toml
real_time_engine/shaders/: shader.wgsl
real_time_engine/src/: ecs.rs  main.rs  mesh.rs  satelite.rs  texture.rs  transform.rs  voxel.rs
real_time_engine/src/ecs/: render.rs
vulkan_renderer/: Cargo.toml  readme.md
vulkan_renderer/shaders/: frag.spv  trangle.frag  trangle.vert  vert.spv  voxel.frag  voxel.vert  voxel_frag.spv  voxel_vert.spv
vulkan_renderer/shaders/slang/: present.slang  present.spv  voxel-frag.spv  voxel.slang
vulkan_renderer/src/: app.rs  main.rs  utils.rs
vulkan_renderer/src/app/: command_buffer.rs  descriptors.rs  model.rs  present_pass.rs  world.rs
vulkan_renderer/src/app/present_pass/: descriptors.rs  mod.rs  model.rs  renderpass.rs  texture.rs
vulkan_renderer/src/app/voxel_renderer/: mod.rs  model.rs  renderpass.rs
vulkan_renderer/src/utils/: linear_algebra.rs
vulkan_renderer/temp_assets/: UI.kra
vulkan_rt/: Cargo.toml  build.rs
vulkan_rt/shaders/src/: push.frag.glsl  push.vert.glsl
vulkan_rt/shaders/src/push/: push.frag  push.vert
vulkan_rt/shaders/src/texture/: texture.frag
vulkan_rt/src/: aftermath_impl.rs  base.rs  extension_manager.rs  hello_many_meshes.rs  hello_push.rs  hello_scenelib.rs  hello_texture.rs  hello_triangle.rs  main.rs  matrix.rs  prelude.rs  render_graph.rs
vulkan_rt/src/base/: extension_manager.rs
vulkan_rt/src/prelude/: mesh.rs  voxel.rs
vulkan_rt/src/render_graph/: diffuse_pass.rs  framebuffer_texture.rs  graph.rs  mesh_descriptors.rs  output_pass.rs  rt_pass.rs  solid_texture.rs
vulkan_rt/src/render_graph/diffuse_pass/: semapore_buffer.rs
vulkan_rt/src/render_graph/rt_pass/: acceleration_structure.rs  descriptor_sets.rs  pipeline.rs  shader.rs
(+75 files in other folders)
