[package]
name = "minya_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniquad = "0.4.0"
egui-miniquad = "0.15.0"
egui = "0.28.1"
cgmath = { version = "0.18.0", features = ["swizzle"] }
rand = "0.8.5"
image = "0.24.2"

log = "0.4.17"
to_numpy = { path = "../to_numpy" }
base_lib = { path = "../base_lib" }
lib_minya = { path = "../cpu_rt" }

rfd = "0.9.1"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }