[package]
name = "lib_minya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = {version = "0.18.0", features = ["swizzle"]}
base_lib = {path = "../base_lib"}
to_numpy = {path = "../to_numpy"}
image = "0.24.2"
log = "0.4.17"
rand="0.8.5"
miniquad = "0.3.0-alpha.46"
dyn-clone = "1.0.9"
dot_vox = "4.1.0"
[features]
default = []
debug_tracing = []