[package]
name = "real_time_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16.0"
winit = "0.28.6"
log = "0.4.17"
pollster = "0.3.0"
bytemuck = {version = "1.13.1", features = ["derive"]}
image = {version = "0.24.6", features = ["png", "jpeg"], default_features = false}
cgmath = "0.18.0"
bevy = {version="0.10.1", default_features = false}