[package]
name = "vulkan_renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
winit = "0.30.12"
ash-window = "0.13.0+1.3.281"
image = { version = "0.25.9", default-features = false, features = [
    "rayon",
    "png",
] }
gpu-allocator = { version = "0.28.0", default-features = false, features = [
    "vulkan",
    "std",
] }
