[package]
name = "vulkan_rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.37.0",features = ["linked"]}
ash-window = "0.10.0"
winit = "0.26.1"
backtrace = "0.3"
bytemuck = {version = "1.9.1",features = ["derive"]}
image = "0.23"
gpu-allocator = {version = "0.18.0",features = ["vulkan"]}
cgmath = "0.18.0"
base_lib = {path = "../base_lib"}
imgui-rs-vulkan-renderer = {version = "1.3.0", features = ["gpu-allocator"]}
imgui = "0.8.2"