[package]
name = "vulkan_rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.37.0+1.3.209",features = ["linked"]}
ash-window = "0.10.0"
winit = "0.26.1"
backtrace = "0.3"
bytemuck = {version = "1.9.1",features = ["derive"]}
image = "0.23"
gpu-allocator = {version = "0.19",features = ["vulkan"]}
cgmath = "0.18.0"
base_lib = {path = "../base_lib"}
imgui-rs-vulkan-renderer = {version = "1.3.0", features = ["gpu-allocator"]}
imgui = "0.8.2"
imgui-winit-support = {version = "0.8.2",features = ["winit-26"]}
generational-arena = "0.2.9"
aftermath-rs = { version = "0.1.2", optional = true}
[features]
validation_layers = []
default = ["validation_layers"]
aftermath = ["dep:aftermath-rs"]